fixed spacing

--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
 
 
 h2{
-    font-family: Arial, Helvetica, sans-serif; 
-    color: rgb(86, 84, 83); 
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    color: rgb(215, 81, 13); 
     text-align: center; 
     margin: 15px; 
 }
@@ -54,11 +54,9 @@ h3 {
     width: 800px; 
     width: 100%; 
     max-width: 800px; 
-    height: 200px;  
-    margin: 20px;     
+    height: 150px;  
+    margin: 10px;     
     align-items: center; 
-    /* text-align: center;  */
-    /* justify-content: center;  */
     box-sizing: border-box; 
     
 }
@@ -104,10 +102,6 @@ h3 {
     border-radius: 5%; 
     width: 150px; 
     height: 150px; 
-    /* width: 100%;
-    max-width: 200px; 
-    height: 100%; 
-    max-height: 200px;  */
     object-fit: cover; 
 }
 
